merubah file utsku.html dan menambahkan file text.txt

--- a/utsku.html
+++ b/utsku.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Tugas UAS </title></head>
 <body>
-<p> Ini Adalah Tugas UTS Smester 5 </p>
+<p>  Tugas UTS Smester 5 </p>
 </body>
 </html>
 
